# ofacxmlagent

./: .gitignore  Cargo.toml  dbdiagram.io
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/entity/: address.rs  address_sdn.rs  aircraft_operator.rs  aircraft_operator_sdn.rs  bic.rs  bic_sdn.rs  bik.rs  bik_sdn.rs  caatsa235.rs  caatsa235_sdn.rs  citizen.rs  citizen_sdn.rs  ddc_alias_sdn.rs  ddc_bic_sdn.rs  dob.rs  dob_identity.rs  document.rs  document_identity.rs  email.rs  email_sdn.rs  eo13662dd.rs  eo13662dd_sdn.rs  eo13846inf.rs  eo13846inf_sdn.rs  eo14024dd.rs  eo14024dd_sdn.rs  equity_ticker.rs  equity_ticker_sdn.rs  former_vessel_flag.rs  former_vessel_flag_sdn.rs  isin.rs  isin_sdn.rs  issuer_name.rs  issuer_name_sdn.rs  mod.rs  name.rs  name_sdn.rs  nationality.rs  nationality_identity.rs  nationality_registration.rs  (+23 more)
src/document/: mod.rs
src/document/inputs/: mod.rs
src/document/inputs/models/: alias.rs  areacode.rs  dateofissue.rs  distinctparty.rs  document.rs  feature.rs  location.rs  mod.rs  profilerelationship.rs  referencevaluesets.rs  sanction.rs
src/document/outputs/: mod.rs
src/processor/: mod.rs
src/processor/entity/: mod.rs  name.rs  sdn.rs
src/processor/export/: fofdbof.rs  fofnasy.rs  mod.rs
src/processor/import/: mod.rs
