[package]
name = "ofacxmlagent"
version = "0.1.0"
edition = "2021"

#[profile.release]
#lto = true
#opt-level = "z"
#strip = true

[dependencies]
tokio = { version = "1.21", features = ["full"] }
async-trait = { version = "^0.1" }
quick-xml = { version = "0.26.0", features = ["serialize"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
log4rs = "1.2"
log = "0.4"
clap = { version = "4.0.19", features = ["derive"] }
serde_yaml = "0.9"
dotenv = "0.15"
sea-orm = { version = "0.10.1", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
regex = "1.6.0"
lazy_static = "1.4.0"
